--- a/dashboard/templates/v2/dash_fforecast.html
+++ b/dashboard/templates/v2/dash_fforecast.html
@@ -65,12 +65,12 @@
                                                 </div>
                                                 <div class="checkbox checkbox-indigo">
                                                     <label>
-                                                      <input type="checkbox" name="fforecast_checkbox" value="flashflood_forecast_high_pop">{% trans 'High'%}
+                                                      <input type="checkbox" name="fforecast_checkbox" value="flashflood_forecast_high_pop">{% trans 'High' %}
                                                  </label>
                                                 </div>
                                                 <div class="checkbox checkbox-indigo">
                                                     <label>
-                                                      <input type="checkbox" name="fforecast_checkbox" value="flashflood_forecast_veryhigh_pop">{% trans 'Very Hig' %}h
+                                                      <input type="checkbox" name="fforecast_checkbox" value="flashflood_forecast_veryhigh_pop">{% trans 'Very High' %}
                                                     </label>
                                                 </div>
                                                 <div class="checkbox checkbox-indigo">
@@ -275,7 +275,7 @@
 
                                         
 
-                                        <label for="themes">Pick a theme :</label>
+                                        <label for="themes">{% trans 'Pick a theme :' %}</label>
                                         <div id="themes">
                                             <button class="theme" data-btn="YlOrRd"></button>
                                             <button class="theme" data-btn="PuRd"></button>
